...
    searchBar.searchTextField.borderStyle = .roundedRect
    searchBar.barTintColor = .clear
    searchBar.backgroundColor = UIColor.clear
    searchBar.isTranslucent = true
    searchBar.setBackgroundImage(UIImage(), for: .any, barMetrics: .default)
    searchBar.searchTextField.backgroundColor = .systemGray6
    searchBar.accessibilityIdentifier = "Search"
    return searchBar
  }()

  private let cityListTableView = CustomTableView(celltype: .cityListTableViewCell)
  private let searchTableView = CustomTableView(celltype: .searchTableViewCell)
  private var isEdited = false
...
